--- a/H_WorkTools/Dailog/ExeView.xaml
+++ b/H_WorkTools/Dailog/ExeView.xaml
@@ -22,7 +22,7 @@
             <TextBlock Text="{Binding Title}" Padding="5" FontSize="14" Margin="5,0"/>
         </md:ColorZone>
         <StackPanel Grid.Row="1" VerticalAlignment="Center" Grid.ColumnSpan="2">
-            <TextBox Text="{Binding TxtTitle}" Margin="15,5" md:HintAssist.Hint="Title"/>
+            <TextBox Text="{Binding TxtTitle}" Margin="15,5" md:HintAssist.Hint="{DynamicResource ExeViewTitle}"/>
         </StackPanel>
         <StackPanel Grid.Row="2" VerticalAlignment="Center" Grid.ColumnSpan="2" >
             <Grid>
@@ -34,14 +34,14 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <Image Grid.Row="0" Grid.Column="0" x:Name="image1" Height="40" Width="40" Stretch="UniformToFill"/>
-                <Button Content="Select" Click="BtnSelect_Click" Width="80" Grid.Row="0" Grid.Column="1" Margin="50,5,0,5" Cursor="Hand"/>
+                <Button Content="{DynamicResource ExeViewSelect}" Click="BtnSelect_Click" Width="80" Grid.Row="0" Grid.Column="1" Margin="50,5,0,5" Cursor="Hand"/>
             </Grid>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Grid.Row="3" HorizontalAlignment="Left" Grid.ColumnSpan="2" Margin="120,0,0,0" >
-            <Button Content="Cancel" Margin="0,0,10,0" Width="80"
+            <Button Content="{DynamicResource ExeViewCancel}" Margin="0,0,10,0" Width="80"
                     Command="{Binding CancelCommand}"
                     Style="{StaticResource MaterialDesignOutlinedButton}" Cursor="Hand"/>
-            <Button Content="OK"   Width="80"  Command="{Binding SureCommand}"/>
+            <Button Content="{DynamicResource ExeViewOK}"   Width="80"  Command="{Binding SureCommand}"/>
         </StackPanel>
     </Grid>
 </UserControl>
