--- a/H_WorkTools/MainWindow.xaml
+++ b/H_WorkTools/MainWindow.xaml
@@ -231,7 +231,7 @@
                                     </TabItem>
                                 </TabControl>
                             </md:Card>
-                            <GroupBox Header="观众列表" Margin="0,12,0,0">
+                            <GroupBox Header="{DynamicResource LvAudience}" Margin="0,12,0,0">
                                 <ListView x:Name="LvAudience" Height="250" ></ListView>
                             </GroupBox>
                         </StackPanel>
@@ -245,7 +245,7 @@
                             </StackPanel>
                         </TabItem.Header>
                         <StackPanel Margin="12">
-                            <TextBlock Margin="0,0,0,8" Style="{StaticResource MaterialDesignHeadline5TextBlock}" Text="端口工具" />
+                            <TextBlock Margin="0,0,0,8" Style="{StaticResource MaterialDesignHeadline5TextBlock}" Text="{DynamicResource PortTitle}" />
                             <Grid >
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="100"/>
@@ -259,8 +259,8 @@
                                     <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
                                 </Grid.RowDefinitions>
                                 <TextBox Grid.Row="0" Grid.Column="0" x:Name="txtPort" Text="" MaxLength="8" md:HintAssist.Hint="Port"/>
-                                <Button Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" Width="80" Content="查询" x:Name="BtnPortSelect" Click="BtnPortSelect_Click" FontSize="14" Cursor="Hand"/>
-                                <Button Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="2" Width="80" Content="杀掉" x:Name="BtnPortKill" Click="BtnPortKill_Click" FontSize="14" Cursor="Hand"/>
+                                <Button Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" Width="80" Content="{DynamicResource PortSelect}" x:Name="BtnPortSelect" Click="BtnPortSelect_Click" FontSize="14" Cursor="Hand"/>
+                                <Button Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="2" Width="80" Content="{DynamicResource PortKill}" x:Name="BtnPortKill" Click="BtnPortKill_Click" FontSize="14" Cursor="Hand"/>
                                 <ListView  Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="5" x:Name="LvPort" Height="530" Margin="0,27,0,0"></ListView>
                             </Grid>
                         </StackPanel>
@@ -274,7 +274,7 @@
                             </StackPanel>
                         </TabItem.Header>
                         <StackPanel Margin="12">
-                            <TextBlock Margin="0,0,0,8" Style="{StaticResource MaterialDesignHeadline5TextBlock}" Text="截图、录屏" />
+                            <TextBlock Margin="0,0,0,8" Style="{StaticResource MaterialDesignHeadline5TextBlock}" Text="{DynamicResource ScreenRecordingTitle}" />
                             <!--截图录屏废弃-开始-->
                             <Grid >
                                 <Grid.ColumnDefinitions>
@@ -291,19 +291,19 @@
                                     <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
                                 </Grid.RowDefinitions>
                                 <!--录屏设置-->
-                                <Label Grid.Row="0" Grid.Column="0" Content="生产路径:" Margin="0,10,0,0"/>
+                                <Label Grid.Row="0" Grid.Column="0" Content="{DynamicResource ScreenRecordingPath}" Margin="0,10,0,0"/>
                                 <TextBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" x:Name="txtPath" md:HintAssist.Hint="Path" Text="" Height="25" Margin="0,10,0,0" VerticalAlignment="Top"/>
-                                <Button Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="1" Click="ScreenRecording_Path_Click" Content="{md:PackIcon FolderOutline,Size=20}" ToolTip="设置路径" Margin="10,0,0,0"/>
-                                <Button Grid.Row="0" Grid.Column="5" Grid.ColumnSpan="1" Click="ScreenRecording_Open_Click" Content="{md:PackIcon FolderOpenOutline,Size=20}" ToolTip="打开目录" Margin="10,0,0,0" Cursor="Hand"/>
+                                <Button Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="1" Click="ScreenRecording_Path_Click" Content="{md:PackIcon FolderOutline,Size=20}" ToolTip="{DynamicResource ScreenRecordingSetPath}" Margin="10,0,0,0"/>
+                                <Button Grid.Row="0" Grid.Column="5" Grid.ColumnSpan="1" Click="ScreenRecording_Open_Click" Content="{md:PackIcon FolderOpenOutline,Size=20}" ToolTip="{DynamicResource ScreenRecordingOpenPath}" Margin="10,0,0,0" Cursor="Hand"/>
 
                                 <!--开始停止录屏-->
-                                <Label Grid.Row="1" Grid.Column="0" Content="{DynamicResource btn_Language_label}" Grid.ColumnSpan="2" />
+                                <Label Grid.Row="1" Grid.Column="0" Content="{DynamicResource ScreenRecordingAudio}" Grid.ColumnSpan="2" />
                                 <ComboBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" x:Name="cbAudio" IsEnabled="{Binding Path=IsChecked, ElementName=FilledComboBoxEnabledCheckBox}"/>
-                                <Button Grid.Row="1" Grid.Column="4" Grid.ColumnSpan="1" Click="ScreenRecording_Refresh_Click" Content="{md:PackIcon Refresh,Size=20}" ToolTip="刷新" Margin="10,0,0,0"/>
+                                <Button Grid.Row="1" Grid.Column="4" Grid.ColumnSpan="1" Click="ScreenRecording_Refresh_Click" Content="{md:PackIcon Refresh,Size=20}" ToolTip="{DynamicResource ScreenRecording_Refresh_Click}" Margin="10,0,0,0"/>
 
-                                <Label Grid.Row="2" Grid.Column="0" Content="录制时间:" Margin="0,20,0,0"/>
+                                <Label Grid.Row="2" Grid.Column="0" Content="{DynamicResource ScreenRecordingTime}" Margin="0,20,0,0"/>
                                 <Label Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" x:Name="LabMins" Content="00:00:00.000" Margin="0,15,0,10" FontSize="18"/>
-                                <ToggleButton Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="1" x:Name="BtnScreenRecordingVideo" Click="ScreenRecording_Video_Click" Height="40" Width="40" Style="{StaticResource MaterialDesignActionToggleButton}" ToolTip="录屏" Content="{md:PackIcon Kind=Video}" md:ToggleButtonAssist.OnContent="{md:PackIcon Kind=Stop,Size=20}" Cursor="Hand" />
+                                <ToggleButton Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="1" x:Name="BtnScreenRecordingVideo" Click="ScreenRecording_Video_Click" Height="40" Width="40" Style="{StaticResource MaterialDesignActionToggleButton}" ToolTip="{DynamicResource ScreenRecording_Video_Click}" Content="{md:PackIcon Kind=Video}" md:ToggleButtonAssist.OnContent="{md:PackIcon Kind=Stop,Size=20}" Cursor="Hand" />
 
                                 <!--输出内容-->
                                 <ScrollViewer Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="5" Height="470" x:Name="VideoScrollViewer">
